# Buildgen

./: .gitignore  README.md  __init__.py  build.yaml  ci.yml  cli.py  pyproject.toml  test_generator.py  test_hello.py
.github/workflows/: python-package.yml
buildgen-project/: LINKEDIN_POST.md
buildgen-project/examples/example_project/: build_hello.py
buildgen-project/src/buildgen/: generator.py
buildgen-project/src/buildgen/templates/: Build.bat.j2  Makefile.j2
