[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "buildgen"
version = "0.1.0"
description = "Generate platform-specific build scripts (Makefile, mswin32/Build.bat) from a single YAML manifest."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
keywords = ["build", "automation", "cross-platform", "makefile", "windows", "devtools"]
dependencies = [
    "PyYAML>=6.0",
    "Jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
buildgen = "buildgen.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
buildgen = ["templates/*.j2"]
